<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_puntuacion"
        android:layout_width="113dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_toStartOf="@+id/text_view_temporizador"
        android:layout_toLeftOf="@+id/text_view_temporizador"
        android:text="@string/textviewPuntuacion"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/text_view_temporizador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_contadorpreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_puntuacion"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_viewPregunta"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_puntuacion" />

    <TextView
        android:id="@+id/text_view_temporizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/textview_time"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/text_view_pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginTop="52dp"
        android:text="@string/textviewlaspreguntas"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_contadorpreguntas"
        tools:layout_editor_absoluteX="12dp"
        android:gravity="center_horizontal" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="393dp"
        android:layout_height="141dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_pregunta">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Radiobuttonopc1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Radiobuttonopc2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Radiobuttonopc3" />
    </RadioGroup>

    <Button
        android:id="@+id/button_confirmar"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginBottom="160dp"
        android:text="@string/btn_confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />
</androidx.constraintlayout.widget.ConstraintLayout>