<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editt_correo"
        android:layout_width="305dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:autofillHints="@string/txt_correo"
        android:ems="10"
        android:hint="@string/txt_correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editt_contraseña"
        android:layout_width="303dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/txt_contraseña"
        android:ems="10"
        android:hint="@string/txt_contraseña"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editt_correo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="69dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_viewccontraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editt_correo" />

    <Button
        android:id="@+id/btn_iniciarsesion"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editt_contraseña"
        tools:text="@string/btn_registrar" />

    <Button
        android:id="@+id/btn_registrar2"
        android:layout_width="138dp"
        android:layout_height="68dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="26dp"
        android:text="@string/btn_iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editt_contraseña"
        tools:text="@string/btn_iniciarsesion" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/ImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mitrologo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_viewcorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>