<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Divertirse">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="287dp"
        android:layout_height="45dp"
        android:layout_marginTop="248dp"
        android:text="@string/textview_jugar"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/textview_estasliso"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/btn_empezar"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:layout_marginTop="52dp"
        android:text="@string/textview_empezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:background="#DEF6E1"/>
</androidx.constraintlayout.widget.ConstraintLayout>